RHCLOUD-5667: implemented exclude executors from playbook run
